properly added the assets for mac

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,8 @@ android {
                 '../src/thirdparty/platform/android'
         ]
         main.res.srcDirs = [
-                '../src/platform/resources/platform/android/res'
+                '../src/platform/android/resources/res',
+                '../src/platform/shared/resources/platform'
         ]
         main.manifest.source = "../src/platform/android/AndroidManifest.xml"
     }
