--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,8 +20,15 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+        
+    - name: Install sdkmanager
+      run: |
+        
+        wget https://dl.google.com/android/repository/sdk-tools-linux-3859397.zip
+        unzip sdk-tools-linux-3859397.zip
+        export PATH=/opt/pradip/tools:/opt/pradip/tools/bin:$PATH
     - name: Install NDK
-      run: echo "y" | sudo /usr/local/lib/android/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
+      run: echo "y" | sudo sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
