--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,7 @@ jobs:
         unzip sdk-tools-linux-3859397.zip
         export PATH=/opt/pradip/tools:/opt/pradip/tools/bin:$PATH
     - name: Install NDK
-      run: echo "y" | sudo sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
+      run: echo "y" | sudo tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
