--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,9 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@master
       with:
         submodules: true
+      
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
