--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,6 +18,9 @@ jobs:
     - uses: actions/checkout@master
       with:
         submodules: true
+        
+    - name: Install NDK
+      run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
       
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
