--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,9 +18,6 @@ jobs:
     - uses: actions/checkout@master
       with:
         submodules: true
-        
-    - name: Checkout submodules
-      run: git submodule update --init --recursive
 
     - name: Install NDK
       run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
@@ -32,5 +29,11 @@ jobs:
         
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+      
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew assembleRelease
+        
+    - uses: actions/upload-artifact@v2
+      with:
+        name: Artifacts
+        path: ./app/build/outputs/apk/release/*.apk
