--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,7 +31,9 @@ jobs:
       run: chmod +x gradlew
       
     - name: Build with Gradle
-      run: ./gradlew assembleRelease
+      run: |
+        ./gradlew clean
+        ./gradlew assembleRelease
         
     - uses: actions/upload-artifact@v2
       with:
